--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,23 @@
 {
-  "arrowParens": "avoid",
-  "trailingComma": "es5",
   "singleQuote": true,
-  "semi": true
+  "jsxBracketSameLine": false,
+  "useTabs": false,
+  "eslintIntegration": false,
+  "tslintIntegration": true,
+  "requireConfig": false,
+  "stylelintIntegration": false,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "embeddedLanguageFormatting": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "jsxSingleQuote": true,
+  "tsxSingleQuote": true,
+  "printWidth": 110,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "semi": true,
+  "tabWidth": 2,
+  "trailingComma": "es5"
 }
