--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "singleQuote": true,
   "jsxBracketSameLine": false,
-  "useTabs": false,
+  "useTabs": true,
   "eslintIntegration": false,
   "tslintIntegration": true,
   "requireConfig": false,
