--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@chakra-ui/react": "^1.7.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/aldrich": "^4.5.0",
+    "@fontsource/kanit": "^4.5.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
