--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-  "name": "local_playlist",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.3",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/aldrich": "^4.5.0",
-    "@fontsource/kanit": "^4.5.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.8.3",
-    "dexie": "^3.2.0",
-    "dexie-react-hooks": "^1.1.1",
-    "framer-motion": "^4.1.17",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
-    "prepare": "husky install"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^16.0.1",
-    "@commitlint/config-conventional": "^16.0.0",
-    "eslint": "^8.6.0",
-    "eslint-plugin-jest": "^25.3.4",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4",
-    "prettier": "^2.5.1",
-    "prettier-eslint": "^13.0.0"
-  }
+	"name": "local_playlist",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@chakra-ui/icons": "^1.1.1",
+		"@chakra-ui/react": "^1.7.3",
+		"@emotion/react": "^11.7.1",
+		"@emotion/styled": "^11.6.0",
+		"@fontsource/aldrich": "^4.5.0",
+		"@fontsource/kanit": "^4.5.0",
+		"@testing-library/jest-dom": "^5.16.1",
+		"@testing-library/react": "^10.4.9",
+		"@testing-library/user-event": "^12.8.3",
+		"dexie": "^3.2.0",
+		"dexie-react-hooks": "^1.1.1",
+		"framer-motion": "^4.1.17",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-icons": "^3.11.0",
+		"react-player": "^2.9.0",
+		"react-router-dom": "^6.2.1",
+		"react-scripts": "5.0.0",
+		"web-vitals": "^0.2.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"lint": "eslint \"**/*.{ts,tsx,js,jsx}\"",
+		"prepare": "husky install"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^16.0.1",
+		"@commitlint/config-conventional": "^16.0.0",
+		"eslint": "^8.6.0",
+		"eslint-plugin-jest": "^25.3.4",
+		"eslint-plugin-react": "^7.28.0",
+		"eslint-plugin-react-hooks": "^4.3.0",
+		"husky": "^7.0.4",
+		"prettier": "^2.5.1",
+		"prettier-eslint": "^13.0.0"
+	}
 }
