--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^10.4.9",
 		"@testing-library/user-event": "^12.8.3",
+		"date-fns": "^2.28.0",
 		"dexie": "^3.2.0",
 		"dexie-react-hooks": "^1.1.1",
 		"framer-motion": "^4.1.17",
